--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
 	"prefer-stable": true,
 	"prefer-dist": true,
 	"require": {
-		"php": ">=5.6",
-		"icanboogie/icanboogie": "^4.0",
+		"php": "^7.2",
+		"icanboogie/icanboogie": "^5.0",
 		"icanboogie/service": "dev-master",
-		"symfony/dependency-injection": "^3.3",
-		"symfony/config": "^3.3",
-		"symfony/yaml": "^3.3"
+		"symfony/dependency-injection": "^4.0",
+		"symfony/config": "^4.0",
+		"symfony/yaml": "^4.0"
 	},
 	"autoload": {
 		"psr-4": {
