--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
 		"php": ">=7.2",
 		"icanboogie/icanboogie": "^4.0",
 		"icanboogie/service": "^4.0",
-		"symfony/dependency-injection": "^4.0",
-		"symfony/config": "^4.0",
-		"symfony/yaml": "^4.0"
+		"symfony/dependency-injection": "^4.0|^5.0",
+		"symfony/config": "^4.0|^5.0",
+		"symfony/yaml": "^4.0|^5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^8.5"
