--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,14 @@
 	"prefer-stable": true,
 	"require": {
 		"php": ">=7.2",
-		"icanboogie/icanboogie": "^5.0",
-		"icanboogie/service": "dev-master",
+		"icanboogie/icanboogie": "^4.0",
+		"icanboogie/service": "^4.0",
 		"symfony/dependency-injection": "^4.0",
 		"symfony/config": "^4.0",
 		"symfony/yaml": "^4.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^8.5"
 	},
 	"autoload": {
 		"psr-4": {
