--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"require": {
-		"php": ">=7.2",
-		"icanboogie/icanboogie": "^4.0",
+		"php": ">=8.0",
+		"icanboogie/icanboogie": "^6.0",
 		"icanboogie/service": "^4.0",
-		"symfony/dependency-injection": "^4.0|^5.0",
-		"symfony/config": "^4.0|^5.0",
-		"symfony/yaml": "^4.0|^5.0"
+		"symfony/dependency-injection": "^6.0",
+		"symfony/config": "^6.0",
+		"symfony/yaml": "^6.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^8.5"
+		"phpunit/phpunit": "^9.5"
 	},
 	"autoload": {
 		"psr-4": {
