--- a/tests/app/default/config/services.yml
+++ b/tests/app/default/config/services.yml
@@ -4,7 +4,7 @@ parameters:
 services:
 
   service_c:
-    class: ICanBoogie\Binding\SymfonyDependencyInjection\ServiceC
+    class: Test\ICanBoogie\Binding\SymfonyDependencyInjection\ServiceC
     arguments:
       - "@service_a"
       - "@service_b"
