--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
 		"php": ">=8.1",
 		"icanboogie/icanboogie": "^6.0",
 		"icanboogie/service": "^5.0",
+		"olvlvl/symfony-dependency-injection-proxy": "^4.0",
 		"symfony/config": "^6.0",
 		"symfony/dependency-injection": "^6.0",
 		"symfony/yaml": "^6.0"
