--- a/config/services.yml
+++ b/config/services.yml
@@ -2,16 +2,23 @@ services:
   _defaults:
     autowire: true
 
+  # This service is set after the container is created
   ICanBoogie\Application:
     synthetic: true
 
   ICanBoogie\ConfigProvider:
-    factory: [ ICanBoogie\Binding\SymfonyDependencyInjection\Factory, build_config_provider ]
+    factory: [ '@service_accessor', get ]
+    arguments: [ configs ]
 
   ICanBoogie\ServiceProvider:
     alias: ICanBoogie\Application
 
+  # helpers to access services available as application's properties
+
+  service_accessor:
+    class: ICanBoogie\Binding\SymfonyDependencyInjection\ServiceAccessor
+
   app.vars:
     class: ICanBoogie\Storage\Storage
-    factory: [ ICanBoogie\Binding\SymfonyDependencyInjection\ServiceAccessor, get ]
+    factory: [ '@service_accessor', get ]
     arguments: [ vars ]
