Test against PHP 8.3

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,36 @@
 ---
 version: "3.2"
 services:
-  app:
-    build: .
+  app81:
+    build:
+      context: .
+      args:
+        PHP_VERSION: "8.1"
+    environment:
+        PHP_IDE_CONFIG: 'serverName=icanboogie-bind-symfony-dependency-injection'
     volumes:
     - .:/app:delegated
-    - ~/.composer:/root/.composer
+    - ~/.composer:/root/.composer:delegated
+    working_dir: /app
+  app82:
+    build:
+      context: .
+      args:
+        PHP_VERSION: "8.2"
+    environment:
+        PHP_IDE_CONFIG: 'serverName=icanboogie-bind-symfony-dependency-injection'
+    volumes:
+    - .:/app:delegated
+    - ~/.composer:/root/.composer:delegated
+    working_dir: /app
+  app83:
+    build:
+      context: .
+      args:
+        PHP_VERSION: "8.3"
+    environment:
+        PHP_IDE_CONFIG: 'serverName=icanboogie-bind-symfony-dependency-injection'
+    volumes:
+    - .:/app:delegated
+    - ~/.composer:/root/.composer:delegated
     working_dir: /app
