--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -5,17 +5,17 @@ on:
 - pull_request
 
 jobs:
-  phpstan:
-    name: PHPCS
-    runs-on: ubuntu-20.04
+  phpcs:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: "8.1"
+        coverage: none
+        php-version: "8.3"
         ini-values: memory_limit=-1
-        tools: composer:v2, phpcs
-    - name: Run PHPCS
-      run: phpcs
+        tools: phpcs, cs2pr
+    - name: Run PHP Code Sniffer
+      run: phpcs -q --report=checkstyle | cs2pr
