--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -6,19 +6,19 @@ on:
 
 jobs:
   phpstan:
-    name: PHPStan
-    runs-on: ubuntu-20.04
+    name: phpstan
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: "8.1"
+        php-version: "8.3"
         ini-values: memory_limit=-1
         tools: composer:v2
     - name: Cache dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: |
           ~/.composer/cache
@@ -28,5 +28,5 @@ jobs:
     - name: Install dependencies
       run: composer install --no-interaction --no-progress
 
-    - name: Run PHPStan
+    - name: Analyze
       run: vendor/bin/phpstan
