--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,25 +7,26 @@ on:
 jobs:
   phpunit:
     name: phpunit
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         php-version:
         - "8.1"
         - "8.2"
+        - "8.3"
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
         coverage: xdebug
         php-version: "${{ matrix.php-version }}"
-        ini-values: apc.enable_cli=1, memory_limit=-1
+        ini-values: memory_limit=-1
         tools: composer:v2
         extensions: apcu
     - name: Cache dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: |
           ~/.composer/cache
@@ -40,7 +41,7 @@ jobs:
       run: make test-coveralls
 
     - name: Upload code coverage
-      if: ${{ matrix.php-version == '8.1' }}
+      if: ${{ matrix.php-version == '8.3' }}
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
